--- a/src/styles/posts.scss
+++ b/src/styles/posts.scss
@@ -8,10 +8,11 @@
     padding-top: 1em;
     padding-bottom: 1em; 
 
-   
-
+    
     font-size: 1.75em;
-    line-height: 2.25em;
+    //line-height: 2.25em;
+
+   
 
     &.mobile, &.tablet {
         padding-left: 1.875em;
@@ -24,6 +25,10 @@
 
     .post {   
         padding: 0.5em; 
+        color: #fff;
+        background-color: silver;
+        width: 100%;
+        
          
         &:nth-child(n+2 ) {  
             //grid-row:  auto / span 2
