--- a/src/styles/vheader.scss
+++ b/src/styles/vheader.scss
@@ -1,6 +1,17 @@
+
+
 .container {
-  height: 60px;
-  background-color: #333333;
+    font-size: 0.75em;
+    letter-spacing: 3px;
+    color: #007fff;
+    background-color: #fff;
+    font-weight: 800;
+    font-family: "Nunito";
+    text-transform: uppercase;
+    z-index: 10;
+
+  min-height: 3.75em;
+  //background-color: #333333;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -27,12 +38,12 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  height: 60px;
+  height: 3.75em;
 }
 
 .container .logo a img {
   max-width: 100%;
-  max-height: 60px;
+  max-height: 3.75em;
 }
 
 .container .navbar {
@@ -45,6 +56,9 @@
   -ms-flex: 1;
   flex: 1;
   padding: 0 10px;
+  z-index: 10;
+ 
+
 }
 
 .container .navbar ul {
@@ -60,19 +74,19 @@
 
 .container .navbar ul li a {
   text-decoration: none;
-  color: #999999;
+  color: #007fff;
   font-size: 14px;
   text-transform: uppercase;
   display: block;
-  height: 60px;
-  line-height: 60px;
+  height: 3.75em;
+  line-height: 3.75em;
   cursor: pointer;
   padding: 0 10px;
 }
 
 .container .navbar ul li a:hover {
-  color: #ffffff;
-  background-color: rgba(23, 23, 23, 0.9);
+  color: #007fff; //#ffffff;
+  //background-color: rgba(23, 23, 23, 0.9);
 }
 
 .container .navbar ul .close {
@@ -82,17 +96,17 @@
 }
 
 .container .navbar ul .close span {
-  font-size: 40px;
+  font-size: 2.5em;
   display: inline-block;
-  border: 1px solid #cccccc;
+  border: 1px solid #CCC;
   padding: 0 10px;
   cursor: pointer;
 }
 
 .container .navbar .icon-bar {
-  padding: 18px 8px;
+  padding: 1em 2px;
   width: 50px;
-  height: 60px;
+  height: 3.75em;
   display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -102,11 +116,13 @@
   -ms-flex-pack: justify;
   justify-content: space-between;
   cursor: pointer;
+  color: #007fff;
 }
 
 .container .navbar .icon-bar i {
-  background-color: #ffffff;
+  background-color: #007fff;
   height: 2px;
+  width: 100%;
 }
 
 @media only screen and (max-width: 650px) {
@@ -137,7 +153,7 @@
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    background: #ffffff;
+    background: #FFF;
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -151,7 +167,7 @@
     font-size: 16px;
     height: auto;
     line-height: normal;
-    color: #555555;
+    color: #007fff; //#999;
   }
 
   .container .navbar ul .close {
