--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,7 +10,10 @@
   -webkit-box-sizing: border-box;
 }
 
-
+a {
+    text-decoration: none;
+    color: inherit;
+}
 .hidden {
     display: none;
 }
