--- a/src/styles/posts.scss
+++ b/src/styles/posts.scss
@@ -1,3 +1,16 @@
+.posts_header {
+    font-size: 1.2em;
+    letter-spacing: 3px;
+    color: #979797;
+
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+    height: 5vh;
+    padding-top: 2em;
+    padding-bottom: 2em;
+}
+
 .posts {
     position: relative;
     height: 100%;
@@ -7,23 +20,7 @@
     grid-row-gap: 1em;
     
     padding-top: 1em;
-    padding-bottom: 1em; 
- 
-
-    h2 {
-        font-size: 1.75em;
-        line-height: 2.25em; 
-        //position: absolute;
-        //bottom: 0;
-
-        &.mobile, &.tablet {
-
-            font-size: 1.125em;
-            line-height: 1.625em;
-        }
-
-    }
-    
+    padding-bottom: 1em;  
 
     &.mobile, &.tablet {
         padding-left: 1.875em;
@@ -37,17 +34,53 @@
 
     .post {   
         position: relative;
-        padding: 3.75em; 
+        padding: 2.75em; 
         color: #fff;
-        background-color: #333;
+        background: linear-gradient(135deg, #fe9800 0%, #f23460 100%);
+        
         width: 100%;
-        min-height: 25em;
-        //vertical-align: text-bottom;
-        filter: grayscale(60%);
+        min-height: 22em; 
+        //max-height: 90vh;
+        height: 100%;
+        //filter: grayscale(20%);
+        overflow: hidden;
+        word-wrap: break-word;
+        text-transform: uppercase;
 
         &:hover {
-            filter: none;
-            transition: all 2s ease; 
+            //filter: none;  
+ 
+
+            .bottom_line { 
+                display: block;  
+                transform: translate3d(0,-5%,0);
+                position: relative;
+                
+                padding-bottom: 1em;
+                transition: opacity 0.55s, transform 0.55s;
+                
+                max-width: calc(100%-2em);
+
+                &:hover::after  {
+                    transform: translate3d(0, 0, 0);
+                    opacity: 1;
+                    position: absolute;
+                    bottom: -10%;
+                }
+
+                .pexcerpt {
+                    opacity: 1; 
+
+                    border-left: 1px solid #fff;
+                    border-bottom: 0px solid #fff;
+                    
+                    padding:1em;
+
+                  
+
+                    
+                }
+            }
         }
         
          
@@ -55,6 +88,20 @@
             //grid-row:  auto / span 2
             grid-row-end: span 2;
         }
+
+        h2 {
+            font-size: 1.75em;
+            line-height: 2.25em; 
+            //position: absolute;
+            //bottom: 0;
+    
+            &.mobile, &.tablet {
+    
+                font-size: 1.125em;
+                line-height: 1.625em;
+            }
+    
+        } 
 
         .tall {
             grid-row: 1 / 3;                          
@@ -66,10 +113,43 @@
             grid-column: 3 / 5;                        
           }
           .bottom_line {
-              position: absolute;
-              bottom: 0;
-              left: 0;
-              padding: 3.75em;
+                
+              transition: opacity 0.55s, transform 0.55s; 
+              transform: translate3d(0,-0.5vh,0); 
+              display: block; 
+              
+              padding-top: 2em; 
+              padding-bottom: 2em; 
+
+              position: relative;
+              height: 100%;
+              max-width: calc(100%-2em); 
+
+              &::after { 
+                left: 0; 
+                transform: translate3d(-100%, 0, 0); 
+                   
+                width: 100%;
+                height: 1px;
+                background: #fff;
+                content: ''; 
+                transition: transform 0.35s; 
+                opacity: 0;
+            }
+
+
+              .pexcerpt {
+                    
+                    opacity: 1; 
+                    padding : 1em; 
+                    border-left: 1px solid inherit;
+                    word-wrap: break-word;
+
+                   
+               
+
+
+              }
           }
         
     }
