--- a/src/styles/vheader.scss
+++ b/src/styles/vheader.scss
@@ -8,7 +8,17 @@
     font-weight: 800;
     font-family: "Nunito";
     text-transform: uppercase;
-    z-index: 10;
+    z-index: 10; 
+
+    &.mobile, &.tablet {
+      padding-left: 1.875em;
+      padding-right: 1.875em; 
+  }
+  &.desktop, &.laptop {
+      padding-left: 15.625em;
+      padding-right: 15.625em;
+  }
+
 
   min-height: 3.75em;
   //background-color: #333333;
@@ -24,7 +34,7 @@
 }
 
 .container .logo {
-  max-width: 250px;
+  max-width: 10.5em;
   padding: 0 10px;
   overflow: hidden;
 }
@@ -71,22 +81,34 @@
   margin: 0;
   padding: 0;
 }
+ 
 
 .container .navbar ul li a {
   text-decoration: none;
-  color: #007fff;
+  //color: #007fff;
   font-size: 14px;
   text-transform: uppercase;
   display: block;
   height: 3.75em;
   line-height: 3.75em;
   cursor: pointer;
-  padding: 0 10px;
+  padding: 0.5em;
+
+  background: linear-gradient( to bottom, #ff9800 0%, #ff9800 100% );
+  background-position: 0 100%;
+  background-repeat: repeat-x;
+  background-size: 4px 4px;
+  color: #000;
+  text-decoration: none;
+  transition: background-size .2s;
+ 
+
 }
 
 .container .navbar ul li a:hover {
-  color: #007fff; //#ffffff;
-  //background-color: rgba(23, 23, 23, 0.9);
+  color: #ffffff; // #007fff;  
+
+  background-size: 4px 50px;
 }
 
 .container .navbar ul .close {
@@ -184,3 +206,5 @@
     left: 0;
   }
 }
+
+ 
