--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -1,3 +1,5 @@
+@import '../styles/_vars.scss';
+@import '~font-awesome/css/font-awesome.css';
 * {
     font-size: 16px;
     font-family: 'Nunito', sans-serif;
@@ -20,7 +22,7 @@ a {
 }
 .img-responsive {
     max-width: 100%;
-    max-height: 200px;
+    max-height: 100%;
     object-fit: cover;
     object-position: bottom;
 }
@@ -29,4 +31,71 @@ a {
     position: relative;
 }
 
-@import '../styles/vars.scss';
+.showMore  {
+    text-align: center;
+    padding: 1em;
+
+
+    ///
+    .showMoreBtn {
+     //font-family: Hack, monospace;
+     background: rgba($mainOrange, 0.9);
+     color: #fff;
+     cursor: pointer;
+     font-size: 1.5em;
+     //line-height: 3.75em;
+     padding: 1.5rem;
+     border: 0;
+     transition: all 0.5s; 
+     width: auto;
+     position: relative;
+     min-width: 15em;
+ 
+     &::after {
+         content: "\f2f6";
+         font-family: "Font Awesome 5 Pro";
+         font-weight: 400;
+         position: absolute;
+         left: 80%;
+         top: 54%;
+         right: 0;
+         bottom: 0;
+         opacity: 0;
+         transform: translate(-50%, -50%);
+ 
+     }
+ 
+     &:hover {
+         background: $mainOrange;
+         transition: all 0.5s; 
+         box-shadow: 0px 5px 10px rgba(0,0,0,0.25);
+         padding: 1.5rem 3rem 1.5rem 1.5rem;
+         color: #fff;
+         letter-spacing: 3px;
+ 
+         &::after {
+             opacity: 1;
+             transition: all 0.5s;
+             color: #fff;
+ 
+         }
+     }
+ 
+ 
+ }
+
+ }
+
+ .posts_header {
+    font-size: 1.2em;
+    letter-spacing: 3px;
+    color: #979797;
+
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+    height: 5vh;
+    padding-top: 3em;
+    padding-bottom: 3em;
+}
+ 
