--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -1,9 +1,12 @@
 @import '../styles/_vars.scss';
+@import '../styles/_mixins.scss';
+@import '~font-awesome/css/font-awesome.css';
+
 .post {
    width: 100%;
    height: 100%;
-   min-height: 35vh;  
- }
+}
+ 
    
 
 article {
@@ -12,12 +15,12 @@ article {
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	min-height: 35vh; 
+	min-height: 40vh;  
 
 
 a {
   	width: 100%;
-	  height: 100%;
+	height: 100%;
 }
  
 figure {
@@ -27,13 +30,14 @@ figure {
 	justify-content: center;
   	width: 100%;
   	height: 100%; 
-	padding: 20px 20px; 
+	padding: 2em 2em; 
 	background-position: center center;
 	background-repeat: no-repeat;
-	background-size: cover; 
-	box-shadow: 0 5px 10px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	background-size: cover;  
+
 	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
 	overflow: hidden;
+
 	&:before,
 	&:after {
 		position: absolute;
@@ -45,7 +49,7 @@ figure {
 	}
 	&:before {
 		content: '';
-		background-color: rgba(black,0.1);
+		background-color: rgba($mainOrange,0.3);
 		z-index: 0;
 	}
 	&:after {
@@ -60,12 +64,17 @@ figure {
 	}
 	&:hover {
 		background-size: 175%;
+		box-shadow: 0px 5px 10px rgba(0,0,0,0.25);
+
 		&:after {
-			content: '>';//'♣︎';
+			content: '\f138';
 			background-color: rgba($mainOrange,0.9);
 			color:#fff;
-			font-size: 2em;
-			z-index: 2; 
+			font-size: 5em;
+			z-index: 2;  
+			border: 0;
+
+		 
 		}
 		.date {
 			bottom: -59px;
@@ -122,3 +131,4 @@ figure {
 	}
 }
 }
+
