--- a/src/styles/_vfooter.scss
+++ b/src/styles/_vfooter.scss
@@ -1,6 +1,6 @@
-footer {
-	min-height: 15vh;
-	background-color: black;
+.footer {
+	height: 15vh;
+	background-color: #000;
 	color: #fff;
 	position: relative;
 	padding: 1.75em;
