--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -21,10 +21,13 @@ a {
     display: none;
 }
 .img-responsive {
+    width: 100%;
     max-width: 100%;
     max-height: 100%;
+    height: auto !important; 
     object-fit: cover;
-    object-position: bottom;
+    object-position: bottom; 
+    
 }
 .main {
     display: block;
@@ -36,7 +39,6 @@ a {
     padding: 1em;
 
 
-    ///
     .showMoreBtn {
      //font-family: Hack, monospace;
      background: rgba($mainOrange, 0.9);
