--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -2,20 +2,21 @@
 @import '../styles/_mixins.scss';
 @import '~font-awesome/css/font-awesome.css';
 
-.post {
+.posts_wrapper, .post {
    width: 100%;
    height: 100%;
-}
- 
-   
+
+
 
 article {
 	position: relative;
 	display: flex;
-	align-items: center;
+	//align-items: center;
 	justify-content: center;
 	width: 100%;
-	min-height: 40vh;  
+	min-height: 42vh;  
+	background-color: #666;
+	align-items: stretch;
 
 
 a {
@@ -49,7 +50,7 @@ figure {
 	}
 	&:before {
 		content: '';
-		background-color: rgba($mainOrange,0.3);
+		background-color: rgba(#000,0.3); // $mainOrange
 		z-index: 0;
 	}
 	&:after {
@@ -68,7 +69,7 @@ figure {
 
 		&:after {
 			content: '\f138';
-			background-color: rgba($mainOrange,0.9);
+			background-color: rgba($mainOrange,0.7);
 			color:#fff;
 			font-size: 5em;
 			z-index: 2;  
@@ -114,14 +115,17 @@ figure {
 		color:#fff;
 		transition: all 0.5s cubic-bezier(.25,.8,.25,1);;
 		z-index: 1;
-		h4 {
+		h3 {
 
 			margin: 0 0 5px; 
-			font-size: 24px;
+			font-size: 1.5em;
 			line-height: 1.35;
 			text-shadow: 1px 1px rgba(black,0.7);
+
+			text-transform: uppercase;
+
 			> span {
-				background-color: rgba($mainOrange,0.8);
+				background-color: rgba(#333,0.8);
 			}
 		}
 		p {
@@ -132,3 +136,5 @@ figure {
 }
 }
 
+
+}
