--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -4,14 +4,41 @@
     display: block;
     @include wrap-paddings;
 
-    .gridder {
-        display: grid;
-         grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
-        width: 100%; 
+    .gridder {  
+        display: grid; 
+        grid-column: 3;
+        max-width: 100%; 
+
+        &:first-child {
+            //grid-template-columns:  (30vw, 1fr);
+            grid-column: 1 / 3;
+            ///grid-template-columns: repeat(auto-fit, minmax(80%, 1fr))
+            
+        }
+
+        @include responsive($md) {
+            ///grid-template-columns: repeat(auto-fit, minmax(40%, 1fr))
+        }
+        
+       
+
         padding-top: 1.875em; 
         padding-bottom: 1.875em;
         grid-column-gap: 1em;
         grid-row-gap: 1em; 
+
+        .featured { 
+            border: 10px solid $mainOrange; 
+            grid-column: 1 / 3; 
+            
+        } 
+        
+
+        &.mobile, &.tablet { 
+             grid-template-columns: repeat(1, 1fr); 
+        }
+      
+        
     }
 
 
